tests/errors/duration-bad-unit/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0014]: Invalid duration literal. Expected `<amount><unit>` segments using the units d, h, m, s, ms, us, ns (e.g. 2m20s).
  │
1 │ def bad = 5sec
  │           ^^^^
  ╰─𜱶 tests/errors/duration-bad-unit/main.pa:1:11
